postgres_tests/reloptions/expected.txt

-----------
QUERY:

-- Simple create
CREATE TABLE reloptions_test(i INT) WITH (FiLLFaCToR=30,
	autovacuum_enabled = false, autovacuum_analyze_scale_factor = 0.2);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test'::regclass;
RESULT:
	postgres: [(['fillfactor=30', 'autovacuum_enabled=false', 'autovacuum_analyze_scale_factor=0.2'],)]

-----------
QUERY:


-- Fail min/max values check
CREATE TABLE reloptions_test2(i INT) WITH (fillfactor=2);
RESULT:
	postgres: value 2 out of bounds for option "fillfactor"
DETAIL:  Valid values are between "10" and "100".


-----------
QUERY:

CREATE TABLE reloptions_test2(i INT) WITH (fillfactor=110);
RESULT:
	postgres: value 110 out of bounds for option "fillfactor"
DETAIL:  Valid values are between "10" and "100".


-----------
QUERY:

CREATE TABLE reloptions_test2(i INT) WITH (autovacuum_analyze_scale_factor = -10.0);
RESULT:
	postgres: value -10.0 out of bounds for option "autovacuum_analyze_scale_factor"
DETAIL:  Valid values are between "0.000000" and "100.000000".


-----------
QUERY:

CREATE TABLE reloptions_test2(i INT) WITH (autovacuum_analyze_scale_factor = 110.0);
RESULT:
	postgres: value 110.0 out of bounds for option "autovacuum_analyze_scale_factor"
DETAIL:  Valid values are between "0.000000" and "100.000000".


-----------
QUERY:


-- Fail when option and namespace do not exist
CREATE TABLE reloptions_test2(i INT) WITH (not_existing_option=2);
RESULT:
	postgres: unrecognized parameter "not_existing_option"


-----------
QUERY:

CREATE TABLE reloptions_test2(i INT) WITH (not_existing_namespace.fillfactor=2);
RESULT:
	postgres: unrecognized parameter namespace "not_existing_namespace"


-----------
QUERY:


-- Fail while setting improper values
CREATE TABLE reloptions_test2(i INT) WITH (fillfactor=-30.1);
RESULT:
	postgres: value -30.1 out of bounds for option "fillfactor"
DETAIL:  Valid values are between "10" and "100".


-----------
QUERY:

CREATE TABLE reloptions_test2(i INT) WITH (fillfactor='string');
RESULT:
	postgres: invalid value for integer option "fillfactor": string


-----------
QUERY:

CREATE TABLE reloptions_test2(i INT) WITH (fillfactor=true);
RESULT:
	postgres: invalid value for integer option "fillfactor": true


-----------
QUERY:

CREATE TABLE reloptions_test2(i INT) WITH (autovacuum_enabled=12);
RESULT:
	postgres: invalid value for boolean option "autovacuum_enabled": 12


-----------
QUERY:

CREATE TABLE reloptions_test2(i INT) WITH (autovacuum_enabled=30.5);
RESULT:
	postgres: invalid value for boolean option "autovacuum_enabled": 30.5


-----------
QUERY:

CREATE TABLE reloptions_test2(i INT) WITH (autovacuum_enabled='string');
RESULT:
	postgres: invalid value for boolean option "autovacuum_enabled": string


-----------
QUERY:

CREATE TABLE reloptions_test2(i INT) WITH (autovacuum_analyze_scale_factor='string');
RESULT:
	postgres: invalid value for floating point option "autovacuum_analyze_scale_factor": string


-----------
QUERY:

CREATE TABLE reloptions_test2(i INT) WITH (autovacuum_analyze_scale_factor=true);
RESULT:
	postgres: invalid value for floating point option "autovacuum_analyze_scale_factor": true


-----------
QUERY:


-- Fail if option is specified twice
CREATE TABLE reloptions_test2(i INT) WITH (fillfactor=30, fillfactor=40);
RESULT:
	postgres: parameter "fillfactor" specified more than once


-----------
QUERY:


-- Specifying name only for a non-Boolean option should fail
CREATE TABLE reloptions_test2(i INT) WITH (fillfactor);
RESULT:
	postgres: invalid value for integer option "fillfactor": true


-----------
QUERY:


-- Simple ALTER TABLE
ALTER TABLE reloptions_test SET (fillfactor=31,
	autovacuum_analyze_scale_factor = 0.3);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test'::regclass;
RESULT:
	postgres: [(['autovacuum_enabled=false', 'fillfactor=31', 'autovacuum_analyze_scale_factor=0.3'],)]

-----------
QUERY:


-- Set boolean option to true without specifying value
ALTER TABLE reloptions_test SET (autovacuum_enabled, fillfactor=32);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test'::regclass;
RESULT:
	postgres: [(['autovacuum_analyze_scale_factor=0.3', 'autovacuum_enabled=true', 'fillfactor=32'],)]

-----------
QUERY:


-- Check that RESET works well
ALTER TABLE reloptions_test RESET (fillfactor);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test'::regclass;
RESULT:
	postgres: [(['autovacuum_analyze_scale_factor=0.3', 'autovacuum_enabled=true'],)]

-----------
QUERY:


-- Resetting all values causes the column to become null
ALTER TABLE reloptions_test RESET (autovacuum_enabled,
	autovacuum_analyze_scale_factor);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test'::regclass AND
       reloptions IS NULL;
RESULT:
	postgres: [(None,)]

-----------
QUERY:


-- RESET fails if a value is specified
ALTER TABLE reloptions_test RESET (fillfactor=12);
RESULT:
	postgres: RESET must not include values for parameters


-----------
QUERY:


-- We can RESET an invalid option which for some reason is already set
UPDATE pg_class
	SET reloptions = '{fillfactor=13,autovacuum_enabled=false,illegal_option=4}'
	WHERE oid = 'reloptions_test'::regclass;
RESULT:
	postgres: None

-----------
QUERY:

ALTER TABLE reloptions_test RESET (illegal_option);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test'::regclass;
RESULT:
	postgres: [(['fillfactor=13', 'autovacuum_enabled=false'],)]

-----------
QUERY:


-- Test vacuum_truncate option
DROP TABLE reloptions_test;
RESULT:
	postgres: None

-----------
QUERY:


CREATE TEMP TABLE reloptions_test(i INT NOT NULL, j text)
	WITH (vacuum_truncate=false,
	toast.vacuum_truncate=false,
	autovacuum_enabled=false);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test'::regclass;
RESULT:
	postgres: [(['vacuum_truncate=false', 'autovacuum_enabled=false'],)]

-----------
QUERY:

INSERT INTO reloptions_test VALUES (1, NULL), (NULL, NULL);
RESULT:
	postgres: null value in column "i" of relation "reloptions_test" violates not-null constraint
DETAIL:  Failing row contains (null, null).


-----------
QUERY:

-- Do an aggressive vacuum to prevent page-skipping.
VACUUM (FREEZE, DISABLE_PAGE_SKIPPING) reloptions_test;
RESULT:
	postgres: None

-----------
QUERY:

SELECT pg_relation_size('reloptions_test') > 0;
RESULT:
	postgres: [(True,)]

-----------
QUERY:


SELECT reloptions FROM pg_class WHERE oid =
	(SELECT reltoastrelid FROM pg_class
	WHERE oid = 'reloptions_test'::regclass);
RESULT:
	postgres: [(['vacuum_truncate=false'],)]

-----------
QUERY:


ALTER TABLE reloptions_test RESET (vacuum_truncate);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test'::regclass;
RESULT:
	postgres: [(['autovacuum_enabled=false'],)]

-----------
QUERY:

INSERT INTO reloptions_test VALUES (1, NULL), (NULL, NULL);
RESULT:
	postgres: null value in column "i" of relation "reloptions_test" violates not-null constraint
DETAIL:  Failing row contains (null, null).


-----------
QUERY:

-- Do an aggressive vacuum to prevent page-skipping.
VACUUM (FREEZE, DISABLE_PAGE_SKIPPING) reloptions_test;
RESULT:
	postgres: None

-----------
QUERY:

SELECT pg_relation_size('reloptions_test') = 0;
RESULT:
	postgres: [(True,)]

-----------
QUERY:


-- Test toast.* options
DROP TABLE reloptions_test;
RESULT:
	postgres: None

-----------
QUERY:


CREATE TABLE reloptions_test (s VARCHAR)
	WITH (toast.autovacuum_vacuum_cost_delay = 23);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reltoastrelid as toast_oid
	FROM pg_class WHERE oid = 'reloptions_test'::regclass \gset
SELECT reloptions FROM pg_class WHERE oid = :toast_oid;
RESULT:
	postgres: syntax error at or near "\"
LINE 3:  FROM pg_class WHERE oid = 'reloptions_test'::regclass \gset
                                                               ^


-----------
QUERY:


ALTER TABLE reloptions_test SET (toast.autovacuum_vacuum_cost_delay = 24);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = :toast_oid;
RESULT:
	postgres: syntax error at or near ":"
LINE 2: SELECT reloptions FROM pg_class WHERE oid = :toast_oid;
                                                    ^


-----------
QUERY:


ALTER TABLE reloptions_test RESET (toast.autovacuum_vacuum_cost_delay);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = :toast_oid;
RESULT:
	postgres: syntax error at or near ":"
LINE 2: SELECT reloptions FROM pg_class WHERE oid = :toast_oid;
                                                    ^


-----------
QUERY:


-- Fail on non-existent options in toast namespace
CREATE TABLE reloptions_test2 (i int) WITH (toast.not_existing_option = 42);
RESULT:
	postgres: unrecognized parameter "not_existing_option"


-----------
QUERY:


-- Mix TOAST & heap
DROP TABLE reloptions_test;
RESULT:
	postgres: None

-----------
QUERY:


CREATE TABLE reloptions_test (s VARCHAR) WITH
	(toast.autovacuum_vacuum_cost_delay = 23,
	autovacuum_vacuum_cost_delay = 24, fillfactor = 40);
RESULT:
	postgres: None

-----------
QUERY:


SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test'::regclass;
RESULT:
	postgres: [(['autovacuum_vacuum_cost_delay=24', 'fillfactor=40'],)]

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = (
	SELECT reltoastrelid FROM pg_class WHERE oid = 'reloptions_test'::regclass);
RESULT:
	postgres: [(['autovacuum_vacuum_cost_delay=23'],)]

-----------
QUERY:


--
-- CREATE INDEX, ALTER INDEX for btrees
--

CREATE INDEX reloptions_test_idx ON reloptions_test (s) WITH (fillfactor=30);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test_idx'::regclass;
RESULT:
	postgres: [(['fillfactor=30'],)]

-----------
QUERY:


-- Fail when option and namespace do not exist
CREATE INDEX reloptions_test_idx ON reloptions_test (s)
	WITH (not_existing_option=2);
RESULT:
	postgres: unrecognized parameter "not_existing_option"


-----------
QUERY:

CREATE INDEX reloptions_test_idx ON reloptions_test (s)
	WITH (not_existing_ns.fillfactor=2);
RESULT:
	postgres: unrecognized parameter namespace "not_existing_ns"


-----------
QUERY:


-- Check allowed ranges
CREATE INDEX reloptions_test_idx2 ON reloptions_test (s) WITH (fillfactor=1);
RESULT:
	postgres: value 1 out of bounds for option "fillfactor"
DETAIL:  Valid values are between "10" and "100".


-----------
QUERY:

CREATE INDEX reloptions_test_idx2 ON reloptions_test (s) WITH (fillfactor=130);
RESULT:
	postgres: value 130 out of bounds for option "fillfactor"
DETAIL:  Valid values are between "10" and "100".


-----------
QUERY:


-- Check ALTER
ALTER INDEX reloptions_test_idx SET (fillfactor=40);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test_idx'::regclass;
RESULT:
	postgres: [(['fillfactor=40'],)]

-----------
QUERY:


-- Check ALTER on empty reloption list
CREATE INDEX reloptions_test_idx3 ON reloptions_test (s);
RESULT:
	postgres: None

-----------
QUERY:

ALTER INDEX reloptions_test_idx3 SET (fillfactor=40);
RESULT:
	postgres: None

-----------
QUERY:

SELECT reloptions FROM pg_class WHERE oid = 'reloptions_test_idx3'::regclass;
RESULT:
	postgres: [(['fillfactor=40'],)]
